...
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="50"/>
                                        <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="mf7-m1-WTY"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Futura-Bold" family="Futura" pointSize="20"/>
                                        <state key="normal" title="SIGN IN">
                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                        <connections>
                                            <action selector="onSignIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uN8-8Z-wZq"/>
                                        </connections>
                                    </button>
...
                                </constraints>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="tGv-f3-eLH">
                                <rect key="frame" x="20" y="285" width="374" height="118"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <textField opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Email Address" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="rYN-20-A4X" customClass="
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="55"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="374" id="bMO-A9-E0f"/>
                                            <constraint firstAttribute="height" constant="55" id="blQ-sA-uNN"/>
                                        </constraints>
...
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="color" keyPath="placeHolderColor">
                                                <color key="value" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                    </textField>
                                    <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Password" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="sP5-Kc-pqa" customClass="NETex
                                        <rect key="frame" x="0.0" y="63" width="374" height="55"/>
                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="55" id="5Sx-Wd-J11"/>
                                        </constraints>
                                        <nil key="textColor"/>
...
